@@ -1,19 +1,58 @@
+<!DOCTYPE html>
 <html>
-<head>
-<title>jsrsasign - RSA Signing and Verification in JavaScript</title>
-</head>
-<body>
-<h1>jsrsasign - RSA Signing and Verification in JavaScript</h1>
 
-<div align="right">Kenji Urushima<br/>Last Update: Apr 30, 2012</div>
-<p>
-The 'jsrsasign'(RSA-Sign JavaScript Library) is a open source free pure JavaScript implementation of 
-<a href="http://www.rsa.com/rsalabs/node.asp?id=2125" target="_blank">PKCS#1 v2.1 RSASSA-PKCS1-v1_5</a> RSA signing and validation algorithm.
-</p>
+  <head>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="jsrsasign : The 'jsrsasign' (RSA-Sign JavaScript Library) is a open source free pure JavaScript implementation of PKCS#1 v2.1 RSASSA-PKCS1-v1_5 RSA signing and validation algorithm." />
 
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>jsrsasign - RSA Signing and Verification in JavaScript</title>
+  </head>
+
+  <body>
+
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/kjur/jsrsasign">Fork Me on GitHub</a>
+
+          <h1 id="project_title">jsrsasign</h1>
+          <h2 id="project_tagline">The 'jsrsasign' (RSA-Sign JavaScript Library) is a open source free pure JavaScript implementation of <a href="http://www.rsa.com/rsalabs/node.asp?id=2125" target="_blank">PKCS#1 v2.1 RSASSA-PKCS1-v1_5</a> RSA signing and validation algorithm.</h2>
+
+          <section id="downloads">
+            <a class="zip_download_link" href="https://github.com/kjur/jsrsasign/zipball/master">Download this project as a .zip file</a>
+            <a class="tar_download_link" href="https://github.com/kjur/jsrsasign/tarball/master">Download this project as a tar.gz file</a>
+          </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+
+<!-- now editing -->
 <h3>NEWS</h3>
-Release 1.2 is now available on Apr 30, 2012 for fixing critical zero padding bug and supporting some other hash
-functions.
+<dl>
+<dt><b>2012-May-11</b>: 
+<dd>Release 1.3 is now available.
+<ul>
+<li>enhanced X509 class support for getting basic certificate fields.</li>
+<li>enhanced ASN1HEX class to refer decendant ASN.1 data</li>
+<li>API document added.</li>
+</ul>
+<dt><b>2012-May-03</b>: 
+<dd>Release 1.2.1 is released. Minified scripts are added.
+<dt><b>2012-Apr-30</b>:
+<dd>Release 1.2 is available for fixing critical zero padding bug and supporting some other hash functions.
+</dl>
+
+<h3>ONLINE TOOL</h3>
+<ul>
+<li><a href="tool_certview.html" target="_blank">Online Certificate Viewer</a></li>
+</ul>
+
 
 <h3>DEMO</h3>
 <ul>
@@ -24,37 +63,65 @@ functions.
 </li>
 </ul>
 
+<h3>DOWNLOAD</h3>
+<ul>
+<li><a href="jsrsasign-1.3.1.tgz">Release 1.3.1</a>: Apr 14, 2013 - add readPrivateKeyFromASN1HexString method to rsapem-1.1.js</li>
+<li><a href="jsrsasign-1.3.tgz">Release 1.3</a>: Mar 11, 2012 - X509 and ASN1HEX class enhancement</li>
+<li><a href="jsrsasign-1.2.1.tgz">Release 1.2.1</a>: Mar 3, 2012 - minified scripts (*.min.js) added</li>
+<li><a href="jsrsasign-1.2.tgz">Release 1.2</a>: Apr 30, 2012 - Critical zero padding bug fix and some other hash support</li>
+<li><a href="jsrsasign-1.1.tgz">Release 1.1</a>: Sep 25, 2010 - Web contents update</li>
+<li>Release 1.0: Jun 03, 2010 - Initial release at
+<a href="http://www9.atwiki.jp/kurushima/pub/jsrsa/" target="_blank">old site
+(www9.atwiki.jp/kurushima/pub/jsrsa/)
+</a>.
+</li>
+
+</ul>
+<a href="http://github.com/kjur/jsrsasign/blob/master/ChangeLog.txt">See 'ChangeLog.txt' in detail.</a>
+
 <h3>SOURCE CODES</h3>
 <p>
-The 'rsa-sign' library contains following source codes. 
+The 'jsrsasign' library contains following source codes. 
 <ul>
-<li><b><a href="rsa-sign.js">rsa-sign.js</a></b> - RSAKey class extension for RSA signing and verification.</li>
-<li><b><a href="x509.js">x509.js</a></b> - X509 class to read subject public key from a PEM formatted X.509 certificate.</li>
-<li><b><a href="rsa-pem.js">rsa-pem.js</a></b> - RSAKey class extension to read PKCS#1 RSA private key PEM file</li>
-<li><b><a href="asn1hex.js">asn1hex.js</a></b> - simple ASN.1 parser to read hexadecimal encoded ASN.1 DER</li>
+<li><b><a href="rsasign-1.2.js">rsa-sign.js</a></b> - RSAKey class extension for RSA signing and verification.
+<a href="rsasign-1.2.min.js">(mini)</a>
+</li>
+<li><b><a href="x509-1.1.js">x509.js</a></b> - X509 class to read subject public key from a PEM formatted X.509 certificate.
+<a href="x509-1.1.min.js">(mini)</a>
+</li>
+<li><b><a href="rsapem-1.1.js">rsa-pem.js</a></b> - RSAKey class extension to read PKCS#1 RSA private key PEM file
+<a href="rsapem-1.1.min.js">(mini)</a>
+</li>
+<li><b><a href="asn1hex-1.1.js">asn1hex.js</a></b> - simple ASN.1 parser to read hexadecimal encoded ASN.1 DER
+<a href="asn1hex-1.1.min.js">(mini)</a>
+</li>
 </ul>
+As for github repository, see <a href="https://github.com/kjur/jsrsasign">https://github.com/kjur/jsrsasign</a>.
 </p>
 
-<h3>LICENSE</h3>
-The 'jsrsasign'(RSA-Sign JavaScript Library) is licensed under the terms of the MIT license
- reproduced below.
+<h3><a href="api/">API DOCUMENT</a></h3>
+The 'jsrsasign'(RSA-Sign JavaScript Library) JavaScript API
+document is available <a href="api/">here</a>.
+
+<h3><a href="license/">LICENSE</a></h3>
+The 'jsrsasign'(RSA-Sign JavaScript Library) is licensed under the terms of 
+the MIT license reproduced which is simple and easy to understand and places 
+almost no restrictions. 
 <ul>
-<li><a href="LICENSE.txt">LICENSE.txt - RSA-Sign JavaScript Library LICENSE</a></li>
+<li><a href="http://github.com/kjur/jsrsasign/blob/master/LICENSE.txt">LICENSE.txt - RSA-Sign JavaScript Library LICENSE</a></li>
 </ul>
 
 <h3>How to sign</h3>
-<pre><blockquote style="background:lightgray">
-var rsa = new RSAKey();
+<pre><code>var rsa = new RSAKey();
 rsa.readPrivateKeyFromPEMString(_PEM_PRIVATE_KEY_STRING_);
 var hSig = rsa.signString("aaa", "sha1"); // sign a string "aaa" with key
-</blockquote></pre>
+</code></pre>
 
 <h3>How to verify signature</h3>
-<pre><blockquote style="background:lightgray">
-vr x509 = new X509();
+<pre><code>var x509 = new X509();
 x509.readCertPEM(_PEM_X509CERT_STRING_);
 var result = x509.subjectPublicKeyRSA.verifyString("aaa", _HEX_SIGNATURE_);
-</blockquote></pre>
+</code></pre>
 
 <h3>How to add supported signature algorithms</h3>
 The script "rsa-sign.js" currently supports 
@@ -65,12 +132,17 @@ MD5withRSA and
 RIPEMD160withRSA
 signature algorithms. However you can extend other signature algorithms
 such like MD2withRSA or SHA384withRSA by just specifying two variables in it.
-<pre><blockquote style="background:lightgray">
-_RSASIGN_DIHEAD['md2'] = "30..."; // Hexadecimal DigestInfo prefix for MD5
-_RSASIGN_HASHHEXFUNC['md2'] = md2hex; // function which returns value in hex.
-</blockquote></pre>
 
-<h3>Required Third Party Source Codes</h3>
+<pre><code>_RSASIGN_DIHEAD['md2'] = "30..."; // Hexadecimal DigestInfo prefix for MD5
+_RSASIGN_HASHHEXFUNC['md2'] = md2hex; // function which returns value in hex.
+</code></pre>
+
+<h3>MY RELATED PROJECT</h3>
+<ul>
+<li><a href="http://kjur.github.com/jsjws/">jsjws - JSON Web Signature(JWS) JavaScript Library</a>
+</ul>
+
+<h3>INCLUDED THRID-PARTY LIBRARIES</h3>
 <p>
 <ul>
 <li><a href="http://www-cs-students.stanford.edu/~tjw/jsbn/" target="_blank">Tom Wu's jsbn library - BigInteger and RSA</a>
@@ -96,33 +168,23 @@ string as the result.</i>
 </ul>
 </p>
 
-<h3>Release</h3>
-<ul>
-<li>Release 1.2: Apr 30, 2012 - Critical zero padding bug fix and some other hash support</li>
-<li>Release 1.1: Sep 25, 2010 - Web contents update</li>
-<li>Release 1.0: Jun 03, 2010 - Initial release</li>
-</ul>
-<a href="ChangeLog.txt">See 'ChangeLog.txt' in detail.</a>
-
 <p></p>
-<center>
-Copyright &copy; 2010-2012 Kenji Urushima. All rights reserved.
-</center>
 
-<div align="right">
-<a href="http://blog.livedoor.jp/k_urushima/" target="_blank" alt="kjur's blog">
-<img src="http://www9.atwiki.jp/kurushima/pub/icon/icon_livedoor_blog.gif" border="0" width="20"/>
-</a>
-<a href="http://www9.atwiki.jp/kurushima/" target="_blank" alt="kjur's wiki">
-<img src="http://www9.atwiki.jp/kurushima/pub/icon/icon_atwiki.gif" border="0" width="20"/>
-</a>
-<a href="http://twitter.com/kjur/" target="_blank" alt="kjur on twitter">
-<img src="http://www9.atwiki.jp/kurushima/pub/icon/icon_twitter.gif" border="0" width="20"/>
-</a>
-<a href="http://x5.choumusubi.com/bin/gg?069823300">
-<img src="http://x5.choumusubi.com/bin/ll?069823300" border="0" width="20"/>
-</a>
+<!-- now editing -->
+
+      </section>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">jsrsasign maintained by <a href="https://github.com/kjur">kjur</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+<div align="center" style="color: white">
+Copyright &copy; 2010-2013 Kenji Urushima. All rights reserved.
 </div>
+      </footer>
+    </div>
 
-</body>
+  </body>
 </html>
