@@ -13,10 +13,10 @@
 <script language="JavaScript" type="text/javascript" src="ripemd160.js"></script>
 <script language="JavaScript" type="text/javascript" src="base64.js"></script>
 
-<script language="JavaScript" type="text/javascript" src="rsapem-1.0.min.js"></script>
+<script language="JavaScript" type="text/javascript" src="rsapem-1.1.min.js"></script>
 <script language="JavaScript" type="text/javascript" src="rsasign-1.2.min.js"></script>
-<script language="JavaScript" type="text/javascript" src="asn1hex-1.0.min.js"></script>
-<script language="JavaScript" type="text/javascript" src="x509-1.0.min.js"></script>
+<script language="JavaScript" type="text/javascript" src="asn1hex-1.1.min.js"></script>
+<script language="JavaScript" type="text/javascript" src="x509-1.1.min.js"></script>
 <script language="JavaScript" type="text/javascript">
 function doSign() {
   var rsa = new RSAKey();
@@ -219,4 +219,3 @@ Copyright &copy; 2010-2012 Kenji Urushima, All Rights Reserved.
 </div>
 </body>
 </html>
-
