@@ -1,6 +1,16 @@
 
 ChangeLog for jsrsasig
 
+* Changes between 1.3 and 1.3.1 [Apr 14, 2013]
+  - rsapem.js updated to 1.1 to 1.1.1
+    - method RSAKey.readPrivateKeyFromASN1HexString added.
+
+* Changes between 1.2.1 and 1.3 [May 10, 2012]
+  - ASN1HEX class defined in asn1hex.js
+  - update x509.js and rsapem.js for ASN1HEX class.
+  - enhance ASN1HEX and X509class.
+  - JavaScript API document is available.
+
 * Changes between 1.2 and 1.2.1 [May 03, 2012]
   - now minified files also provided
 
